# viz

./: .gitignore  Cargo.toml  README.md
crates/bevy_flowkit/: Cargo.toml  README.md
crates/bevy_flowkit/src/: lib.rs
crates/bevy_moon/: Cargo.toml  README.md
crates/bevy_moon/src/: computed.rs  geometry.rs  layout.rs  lib.rs  measure.rs  picking.rs  stack.rs  style.rs  systems.rs  utils.rs
crates/bevy_moon/src/elements/: image.rs  mod.rs  node.rs  text.rs
crates/bevy_moon/src/properties/: mod.rs  overflow.rs
crates/bevy_moon/src/render/: box_shadow.rs  box_shadow.wgsl  extract.rs  flags.rs  graph.rs  mod.rs  pipeline.rs  plugin.rs  quad.rs  systems.rs  transparent.rs  ui.rs  ui.wgsl  view.rs
crates/egui_flowkit/: Cargo.toml  README.md
crates/egui_flowkit/src/: lib.rs  mesh.rs  utils.rs  vertex.rs
crates/flowkit/: Cargo.toml  README.md
crates/flowkit/src/: action.rs  corner.rs  curve.rs  edge.rs  lib.rs  path.rs  utils.rs  winding_order.rs
crates/flowkit/src/path/: bezier.rs  mod.rs  smooth.rs  steps.rs
crates/gpui_flowkit/: Cargo.toml  README.md
crates/gpui_flowkit/src/: lib.rs
crates/makepad_flowkit/: Cargo.toml  README.md
crates/makepad_flowkit/src/: lib.rs  mesh.rs  utils.rs  vertex.rs
crates/makepad_tessellation/: Cargo.toml  README.md
crates/makepad_tessellation/src/: draw.rs  lib.rs  utils.rs  vertex.rs
examples/: README.md
examples/bevy/: Cargo.toml
examples/bevy/src/: node_based.rs  overflow.rs  overflow_debug.rs  text.rs
examples/bevy/src/utils/: mod.rs
examples/binding/viz_binding/: Cargo.toml
examples/binding/viz_binding/src/: main.rs
examples/egui/: Cargo.toml
examples/egui/src/: canvas.rs
examples/experimental/viz-experimental/: content_type.rs
examples/fromRequest/viz_fromRequest/: Cargo.toml
examples/fromRequest/viz_fromRequest/src/: api_err.rs  lib.rs  main.rs  valid.rs
examples/gpui/: Cargo.toml
examples/gpui/src/: canvas.rs
examples/intoResponse/viz_IntoResponse/: Cargo.toml
examples/intoResponse/viz_IntoResponse/src/: main.rs
examples/makepad/: Cargo.toml
examples/makepad/src/: canvas.rs
examples/middleware/viz_middleware/: Cargo.toml
examples/middleware/viz_middleware/src/: main.rs
examples/state/viz_state/: Cargo.toml
examples/state/viz_state/src/: main.rs
viz-core/: Cargo.toml
viz-core/src/: body.rs  error.rs  into_response.rs  lib.rs  sse.rs  ws.rs
viz-core/src/types/: cookie.rs  json.rs  session.rs
viz-core/src/types/sse/: event.rs
viz-core/tests/: error.rs  handler.rs  into_response.rs
viz-macros/tests/: handler.rs
viz-test/tests/: request.rs
web/: index.html
