[workspace]
resolver = "2"
members = [
    "viz",
    "viz-core",
    "viz-handlers",
    "viz-macros",
    "viz-router",
    "viz-tower",
    "viz-smol",
    "viz-test",

    "examples/hello-world",
    "examples/unix-socket",
    "examples/static-files/embed",
    "examples/static-files/serve",
    "examples/static-files/include-dir",
    "examples/limits",
    "examples/forms/form",
    "examples/forms/multipart",
    "examples/websocket-chat",
    "examples/sse",
    "examples/session",
    "examples/csrf",
    "examples/cors",
    "examples/rustls",
    "examples/static-routes",
    "examples/routing/todos",
    "examples/routing/openapi",
    "examples/otel/*",
    "examples/compression",
    "examples/templates/*",
    "examples/tracing",
    "examples/graceful-shutdown",
    "examples/databases/*",
    "examples/htmlx",
    "examples/tower",
    "examples/smol",
]

[workspace.package]
version = "0.10.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2024"
homepage = "https://viz.rs"
documentation = "https://docs.rs/viz"
repository = "https://github.com/viz-rs/viz"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
viz = { version = "0.10.0", path = "viz" }
viz-core = { version = "0.10.0", path = "viz-core" }
viz-router = { version = "0.10.0", path = "viz-router" }
viz-handlers = { version = "0.10.0", path = "viz-handlers", default-features = false }
viz-macros = { version = "0.2.0", path = "viz-macros" }
viz-test = { version = "0.4.0", path = "viz-test" }
viz-tower = { version = "0.3.0", path = "viz-tower" }

viz-smol = { version = "0.3.0", path = "viz-smol" }

anyhow = "1.0.99"
async-trait = "0.1"
bytes = "1.9"
serde = { version = '1.0.219', features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0"
serde_urlencoded = "0.7"
sync_wrapper = "1.0"
thiserror = "2.0"

# router
path-tree = "0.8"

# session
sessions = "0.7"
sessions-core = "0.7"
sessions-memory = "0.7"

# http
headers = "0.4"
http = "1.1"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.6" }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
mime = "0.3"
mime_guess = "2.0"
percent-encoding = "2.3"
rfc7239 = "0.1"                                                  # realip
form-data = "0.6"
cookie = { version = "0.18", features = ["percent-encode"] }

hex = "0.4"
rust-embed = "8.5"

futures-util = "0.3"
tokio = { version = "1.45", features = ["net"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.27"
tokio-util = "0.7"

# TLS
rustls-pemfile = "2.1"
tokio-native-tls = "0.3"
tokio-rustls = "0.26"

# OpenTelemetry
opentelemetry = { version = "0.29", default-features = false }
opentelemetry_sdk = { version = "0.29", default-features = false }
opentelemetry-otlp = { version = "0.29", default-features = false, features = [
    "trace",
    "http-proto",
] }
opentelemetry-prometheus = { version = "0.29", features = [
    "prometheus-encoding",
] }
opentelemetry-semantic-conventions = { version = "0.29" }
prometheus = "0.14"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tower
tower = "0.5"
tower-http = "0.6"

# Soml
async-channel = "2.3"
async-executor = "1.13"
async-io = "2.3"
async-net = "2.0"
smol-hyper = "0.1"
smol-macros = "0.1"
macro_rules_attribute = "0.2"
futures-lite = { version = "2.3", default-features = false, features = ["std"] }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_code = "forbid"
single_use_lifetimes = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [] }
missing_debug_implementations = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"                                                            # Downgrade deny-by-default lints
pedantic = "warn"
missing_errors_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }
lint_groups_priority = { level = "allow", priority = 1 }                # https://github.com/rust-lang/rust-clippy/issues/12270
literal_string_with_formatting_args = { level = "allow", priority = 1 }

[workspace.lints.rustdoc]
private_intra_doc_links = 'allow'
