[package]
name = "viz-core"
version = "0.1.0-alpha"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
description = "Viz Core"
license = "Apache-2.0/MIT"
edition = "2018"

[features]
default = ["sse", "ws"]
# cookies = ["cookie"]
sse = []
ws = ["tokio-tungstenite", "tokio"]

[dependencies]
viz-utils = { path = "../viz-utils", version = "0.1.0-alpha" }

handle = "1"

form-data = "0.0.6"
headers = "0.3"
bytes = "0.5"
http = "0.2"
mime = "0.3"
hyper = { version = "0.13", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
cookie = { version = "0.14", default-features = false, features = ["percent-encode", "secure"] }
toml = "0.5"

tokio = { version = "0.2", default-features = false, features = ["rt-core"], optional = true }
tokio-tungstenite = { version = "0.11", default-features = false, optional = true }
pin-project = "1.0"

[dev-dependencies]
futures-executor = "0.3"
