[package]
name = "viz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/viz-core"
description = "The core traits and types in for Viz"
keywords = ["async", "framework", "http", "service", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]

[features]
default = [
  "state",
  "limits",
  "query",
  "form",
  "json",
  "multipart",
  "params",
  "cookie",
  "session",
]

state = []
limits = []

query = ["dep:serde", "dep:serde_urlencoded"]
form = ["dep:serde", "dep:serde_urlencoded"]
json = ["dep:serde", "dep:serde_json"]
multipart = ["dep:form-data"]
params = ["dep:serde"]

cookie = ["dep:cookie"]
cookie-private = ["cookie", "cookie?/private"]
cookie-signed = ["cookie", "cookie?/signed"]

session = ["cookie-private", "json", "dep:sessions-core"]

websocket = ["dep:tokio-tungstenite", "tokio/rt"]
sse = ["dep:tokio-stream", "tokio/time"]
fs = ["tokio-util/io", "tokio/fs"]

csrf = ["cookie-private", "dep:base64", "dep:getrandom"]
cors = []

compression = ["tokio-util/io", "dep:async-compression"]

otel = ["dep:opentelemetry", "dep:opentelemetry-semantic-conventions"]
otel-tracing = ["otel", "opentelemetry?/trace"]
otel-metrics = ["otel", "opentelemetry?/metrics"]

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
sync_wrapper.workspace = true
thiserror.workspace = true

bytes.workspace = true
headers.workspace = true
http-body-util.workspace = true
http-body.workspace = true
http.workspace = true
hyper-util.workspace = true
hyper.workspace = true
mime.workspace = true

rfc7239.workspace = true
cookie = { workspace = true, optional = true }
form-data = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_urlencoded = { workspace = true, optional = true }
sessions-core = { workspace = true, optional = true }

# CSRF
getrandom = { version = "0.3", optional = true }
base64 = { version = "0.22", optional = true }

# Compression
async-compression = { version = "0.4", features = [
  "tokio",
  "gzip",
  "brotli",
  "deflate",
], optional = true }
# Tokio
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

# OpenTelemetry
opentelemetry = { workspace = true, default-features = false, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
