[package]
name = "bevy_flowkit"
version = "0.1.0"
description = "A UI workflow tool library for Bevy Engine"
keywords = ["bevy", "workflow", "flow"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
flowkit.workspace = true
bevy_math.workspace = true
bevy_prototype_lyon.workspace = true

[lints]
workspace = true
