[package]
name = "egui_flowkit"
description = "A UI workflow library for egui"
keywords = ["egui", "workflow", "flow"]
version = "0.3.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
flowkit = { path = "../flowkit", version = "0.4.0" }

egui.workspace = true
glam.workspace = true
lyon_path.workspace = true
lyon_tessellation.workspace = true
tracing.workspace = true

[lints]
workspace = true
