[package]
name = "flowkit"
description = "A universal UI workflow library"
keywords = ["viz", "ui", "workflow", "flow"]
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
glam.workspace = true
lyon_path.workspace = true

[lints]
workspace = true
