[package]
name = "gpui_flowkit"
description = "A UI workflow library for gpui"
keywords = ["gpui", "workflow", "flow"]
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
flowkit = { path = "../flowkit", version = "0.2.0" }

gpui.workspace = true
glam.workspace = true
lyon_path.workspace = true
lyon_tessellation.workspace = true
tracing.workspace = true

[lints]
workspace = true
